default: Fix a missing margin for backend image_target select label

--- a/templates/default/admin/style.css
+++ b/templates/default/admin/style.css
@@ -4184,6 +4184,9 @@ img.mfp-img {
     #media_pane_sort .hideSubDirLabel {
         white-space: pre;
     }
+    #select_image_target + label {
+        margin-inline-start: .5em;
+    }
     .js .media_controls video {
         max-width: 24em;
     }
